school-system/src/main/java/com/example/school/system/error/UserExistsExceptionHandler.java
package com.example.school.system.error;

public class UserExistsExceptionHandler extends RuntimeException {
    public UserExistsExceptionHandler(String message) {
        super(message);
    }
}
